@@ -26,6 +26,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #28089: Fix a regression introduced in warnings.catch_warnings():
+  call warnings.showwarning() if it was overriden inside the context manager.
+
 - Issue #27172: To assist with upgrades from 2.7, the previously documented
   deprecation of ``inspect.getfullargspec()`` has been reversed. This decision
   may be revisited again after the Python 2.7 branch is no longer officially
